--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="err_string_email">Enter a valid email</string>
     <string name="err_string_password">Enter a valid password with 6 characters</string>
     <string name="err_msg_required">Required</string>
+    <string name="title_activity_add_post">AddPostActivity</string>
 </resources>
