--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,15 +7,8 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="menu_tools">Tools</string>
-    <string name="menu_share">Share</string>
-    <string name="menu_send">Send</string>
     <string name="menu_home">Home</string>
     <string name="menu_guide">Guide</string>
-    <string name="menu_news">News</string>
-    <string name="menu_update">Update</string>
     <string name="menu_tour">Tournament</string>
     <string name="menu_support">Support</string>
     <string name="menu_login">Log in</string>
@@ -37,4 +30,21 @@
     <string name="err_string_password">Enter a valid password with 6 characters</string>
     <string name="err_msg_required">Required</string>
     <string name="title_activity_add_post">AddPostActivity</string>
+
+    <string name="catalog_prompt">Choose a catalog</string>
+
+    <string-array name="catalog_arrays">
+        <item>News</item>
+        <item>Champions</item>
+        <item>Items</item>
+        <item>Runes</item>
+    </string-array>
+
+    <string name="role_prompt">Choose a catalog</string>
+
+    <string-array name="role_arrays">
+        <item>Admin</item>
+        <item>Employee</item>
+        <item>User</item>
+    </string-array>
 </resources>
